# napper

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  fasta_rle.cpp  fastq_rle.cpp  fastq_rle.sh  main.cpp
docker/: Dockerfile  Makefile  wrapper.sh
modules/headers/: argparse.h  common.h  fastareader.h  fastqreader.h  read.h  runlength_encoder.h  sequence.h  util.h  writer.h
modules/src/: fastareader.cpp  fastqreader.cpp  read.cpp  runlength_encoder.cpp  sequence.cpp  writer.cpp
modules/unit_tests/: CMakeLists.txt
modules/unit_tests/test_runlength/: CMakeLists.txt  main.cpp  test_runlength.cpp
testdata/: GRSm.fa  nanopore_fasq.fastq
